# cmake-bug-26342

./: CMakeLists.txt  README.md
sdl2_dependency/: CMakeLists.txt
third_party_lib/: CMakeLists.txt
